# FingertipDrop

./: CMakeLists.txt  FingertipDrop.qmlproject  FingertipDrop.qmlproject.qtds  README.md  qds.cmake  versioninfo.rc
App/: main.cpp
App/autogen/: environment.h
FingertipDrop/: CMakeLists.txt  Constants.qml  qmldir
FingertipDrop/designer/: plugin.metainfo
FingertipDropContent/: App.qml  CMakeLists.txt  ConnectDeviceScreen.qml  ConnectDeviceScreenForm.ui.qml  DeviceList.qml  DeviceListForm.ui.qml  DeviceListItem.qml  DeviceListItemForm.ui.qml  Flatbackground.ui.qml  ReadyScreen.qml  ReadyScreenForm.ui.qml  Screen01.ui.qml  StartScrenn.qml  StartScrennForm.ui.qml
backend/: CMakeLists.txt  backend.cpp  backend.h  index.html  mylistmodel.cpp  mylistmodel.h  resources.qrc  syncserver.cpp  syncserver.h
backend/css/: style.css
backend/html/: index.html
backend/js/: script.js
backend_mock/Backend/: BackendMock.qml
